--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
         <ul id="list">
             <li>Second item</li>
-            <li onclick="popupFunc()">Third item</li>
+            <li onclick="acpopup()">Third item</li>
         </ul>
     </div>
 
