--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 <body>
 <p>Hello!</p>
 
+<button id="init_sub">Подписаться на уведомления</button> // Кнопка подписки
+ 
+<script>
+    acDataLayer.push({ matching:{ matching_mode: 'email', matching: { email: 'no_timeout@example.com', db_ids: [15] } }})
+</script>
     
 </body>
 </html>
